[package]
name = "monad-firehose-tracer"
version = "0.14.0"
edition = "2021"
authors = ["StreamingFast <info@streamingfast.io>"]
license = "Apache-2.0"
repository = "https://github.com/streamingfast/monad-firehose-tracer"
homepage = "https://github.com/streamingfast/monad-firehose-tracer"

[[bin]]
name = "monad-firehose-tracer"
path = "src/main.rs"

[[test]]
name = "monad_tracer_test"
path = "tests/monad_tracer_test.rs"

[dependencies]
firehose = { git = "https://github.com/streamingfast/evm-firehose-tracer-rs", branch = "feature/add-monad", package = "firehose" }
alloy-primitives = "1.5"
base64 = "0.22"
clap = { version = "4", features = ["derive", "env"] }
color-eyre = "0.6"
eyre = "0.6"
futures-util = "0.3"
hex = "0.4"
monad-exec-events = { git = "https://github.com/streamingfast/monad-bft", branch = "feature/add-sys-calls-v0.12.7" }
monad-event-ring = { git = "https://github.com/streamingfast/monad-bft", branch = "feature/add-sys-calls-v0.12.7" }
prost = "0.14"
prost-types = "0.14"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.0", features = ["full"] }
tokio-stream = "0.1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
chrono = { version = "0.4", features = ["serde"] }

[dev-dependencies]
firehose-test = { git = "https://github.com/streamingfast/evm-firehose-tracer-rs", branch = "feature/add-monad", package = "firehose-test" }
pb = { git = "https://github.com/streamingfast/evm-firehose-tracer-rs", branch = "feature/add-monad", package = "pb" }
